# gritgrub

./: .forgeignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  FUTURE.md  README.md
crates/api/: Cargo.toml  build.rs
crates/api/src/: agent_sdk.rs  attestation_service.rs  auth.rs  client.rs  config.rs  dashboard.html  event_service.rs  http_gateway.rs  lib.rs  rate_limit.rs  serve.rs  server.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: agent.rs  attest.rs  branch.rs  cat.rs  checkout.rs  clone.rs  collab.rs  commit.rs  config.rs  diff.rs  explore.rs  export_git.rs  identity.rs  import_git.rs  init.rs  log.rs  merge.rs  mod.rs  pipeline.rs  provision.rs  pull.rs  push.rs  remote.rs  reset.rs  sbom.rs  serve.rs  show.rs  stash.rs  status.rs  tag.rs  verify.rs  watch.rs
crates/cli/tests/: e2e.rs
crates/core/: Cargo.toml
crates/core/fuzz/: Cargo.toml  token.dict
crates/core/fuzz/fuzz_targets/: fuzz_glob_match.rs  fuzz_object_parse.rs  fuzz_validate_token.rs
crates/core/src/: attestation.rs  capability_token.rs  changeset.rs  events.rs  exploration.rs  id.rs  identity.rs  lib.rs  object.rs  pipeline.rs  policy.rs  refs.rs  signing.rs  token.rs  tree.rs
crates/core/tests/: property_tests.proptest-regressions  property_tests.rs
crates/store/: Cargo.toml
crates/store/src/: backend.rs  lib.rs  redb_backend.rs  repo.rs
crates/store/tests/: integration.rs
proto/gritgrub/v1/: attestation.proto  events.proto  identity.proto  objects.proto  repo.proto
