[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/store",
    "crates/api",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
gritgrub-core = { path = "crates/core" }
gritgrub-store = { path = "crates/store" }

blake3 = "1"
redb = "2"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"
prost = "0.13"
tonic = "0.12"
