[package]
name = "gritgrub-api"
version.workspace = true
edition.workspace = true

[dependencies]
gritgrub-core = { workspace = true }
gritgrub-store = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
tokio-stream = "0.1"
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
