[package]
name = "gritgrub-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
gritgrub-core = { workspace = true }
gritgrub-store = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
gritgrub-api = { path = "../api" }
tonic = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
portpicker = "0.1"
