[package]
name = "gritgrub-core"
version.workspace = true
edition.workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
base64 = "0.22.1"

[dev-dependencies]
proptest = "1"
