[package]
name = "gritgrub-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.gritgrub-core]
path = ".."

[[bin]]
name = "fuzz_validate_token"
path = "fuzz_targets/fuzz_validate_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_object_parse"
path = "fuzz_targets/fuzz_object_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_glob_match"
path = "fuzz_targets/fuzz_glob_match.rs"
test = false
doc = false
bench = false
